# ros2_study_ws

./: .gitignore  Beginner_CLI_Tools.md  Beginner_Client_Libraries.md  Intermediate.md  README.md  cheat_sheat.md  cspell.json  frames.gv  guia_tutoriais.md  memoria.md  turtlesim.yaml
bag_files/rosbag2_2022_03_27-12_31_46/: metadata.yaml  rosbag2_2022_03_27-12_31_46_0.db3
bag_files/subset/: metadata.yaml  subset_0.db3
docs/: index.md
install/: local_setup.sh  setup.sh
install/py_pubsub/share/py_pubsub/: package.sh  (+1 more)
log/: latest_build
src/action_tutorials_cpp/: CMakeLists.txt  package.xml
src/action_tutorials_cpp/src/: fibonacci_action_server.cpp
src/action_tutorials_interfaces/: CMakeLists.txt  package.xml
src/action_tutorials_py/: package.xml  setup.py
src/cpp_parameter_event_handler/: CMakeLists.txt  package.xml
src/cpp_parameters/: CMakeLists.txt  package.xml
src/cpp_pubsub/: CMakeLists.txt  package.xml
src/cpp_srvcli/: CMakeLists.txt  package.xml
src/launch_tutorial/: package.xml  setup.py
src/learning_tf2_cpp/: CMakeLists.txt  package.xml
src/learning_tf2_py/: package.xml  setup.py
src/more_interfaces/: CMakeLists.txt  package.xml
src/my_package/: package.xml
src/my_package_python/: package.xml  setup.py
src/polygon_base/: CMakeLists.txt  package.xml
src/polygon_plugins/: CMakeLists.txt  package.xml
src/py_pubsub/: package.xml  setup.py
src/py_srvcli/: package.xml  setup.py
src/python_parameters/: package.xml  setup.py
src/tutorial_interfaces/: CMakeLists.txt  package.xml
src/urdf_tutorial_r2d2/: package.xml  setup.py
(+69 files in other folders)
